--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.468.0",
+    "@aws-sdk/credential-provider-ini": "^3.468.0",
+    "aws-sdk": "^2.1513.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "lodash": "^4.17.21",
-    "nodemon": "^3.0.2"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
+    "package-json": "^8.1.1",
+    "save": "^2.9.0"
   }
 }
