--- a/package.json
+++ b/package.json
@@ -11,25 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
+    
+    "aws-sdk": "^2.1515.0",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
-    "lodash": "^4.17.21"
-  },
-  "devDependencies": {
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.2"
-=======
-    "@aws-sdk/client-s3": "^3.468.0",
-    "@aws-sdk/credential-provider-ini": "^3.468.0",
-    "aws-sdk": "^2.1513.0",
-    "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
-    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "package-json": "^8.1.1",
-    "save": "^2.9.0"
->>>>>>> bb953c8b8e302b8f8194fafba96702eb18cc2328
+    "package-json": "^8.1.1"
   }
 }
