--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.4.3",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "package-json": "^8.1.1",
     "passport": "^0.7.0",
