--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
     "package-json": "^8.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
