--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "concurrently \"npm run start-flask\" \"npm run start-node\"",
     "start-flask": "python Face_recognition/app.py",
     "start-node": "nodemon app.js"
-
   },
   "keywords": [],
   "author": "",
@@ -30,6 +29,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "nodemon": "^3.0.2"
   }
 }
