--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 Pygments==2.16.1
 python-dateutil==2.8.2
-pywin32==306
+# pywin32==306
 pyzmq==25.1.1
 requests==2.31.0
 requests-oauthlib==1.3.1
