--- a/requirements.txt
+++ b/requirements.txt
@@ -24,9 +24,9 @@ face-recognition-models==0.3.0
 Flask==3.0.0
 flatbuffers==23.5.26
 frozenlist==1.4.0
-gast==0.5.4
+gast==0.4.0
 google-auth==2.25.2
-google-auth-oauthlib==1.2.0
+google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.60.0
 h5py==3.10.0
@@ -40,7 +40,7 @@ jmespath==1.0.1
 joblib==1.3.2
 jupyter_client==8.5.0
 jupyter_core==5.4.0
-keras==2.15.0
+keras==2.13.1
 libclang==16.0.6
 Markdown==3.5.1
 MarkupSafe==2.1.3
@@ -48,7 +48,7 @@ matplotlib-inline==0.1.6
 ml-dtypes==0.2.0
 multidict==6.0.4
 nest-asyncio==1.5.8
-numpy==1.26.2
+numpy==1.24.3
 oauthlib==3.2.2
 openai==0.28.1
 opencv-python==4.8.1.78
@@ -66,7 +66,7 @@ pyasn1==0.5.1
 pyasn1-modules==0.3.0
 Pygments==2.16.1
 python-dateutil==2.8.2
-pywin32==306
+# pywin32==306
 pyzmq==25.1.1
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -76,21 +76,25 @@ scikit-learn==1.3.2
 scipy==1.11.4
 six==1.16.0
 stack-data==0.6.3
-tensorboard==2.15.1
+tensorboard==2.13.0
 tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-intel==2.15.0
-tensorflow-io-gcs-filesystem==0.31.0
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==0.0.1
+tensorflow-io-gcs-filesystem==0.34.0
 termcolor==2.4.0
 threadpoolctl==3.2.0
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.12.0
-typing_extensions==4.9.0
+typing_extensions==4.5.0
 urllib3==2.0.7
 wcwidth==0.2.8
 Werkzeug==3.0.1
 wrapt==1.14.1
 yarl==1.9.2
 gunicorn==20.1.0
+python-dateutil==2.8.2
+pywin32==306; sys_platform == 'win32'
+# tensorflow==2.15.0  # Replaced tensorflow-intel with tensorflow
+
