--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run start-flask\" \"npm run start-node\"",
-    "start-flask": "python Face_recognition/app.py",
+    "start-flask": "python3 Face_recognition/app.py",
     "start-node": "nodemon server.js"
   },
   "keywords": [],
