--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "concurrently \"npm run start-flask\" \"npm run start-node\"",
-    "start-flask": "python3 Face_recognition/app.py",
+    "start-flask": "python Face_recognition/app.py",
     "start-node": "nodemon server.js"
   },
   "keywords": [],
@@ -26,7 +26,9 @@
     "multer": "^1.4.5-lts.1",
     "package-json": "^8.1.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pip": "^0.0.1",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
