--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "package-json": "^8.1.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
