--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.507.0",
     "aws-sdk": "^2.1515.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -27,7 +28,8 @@
     "mysql": "^2.18.1",
     "package-json": "^8.1.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "wasabi-s3": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
